--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -11,47 +11,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10  # Changed from 3.1 to 3.10
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tensorflow==2.13.1 tensorflowjs==3.18.0 protobuf==3.20.3 tensorflow-hub==0.12.0
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tensorflow==2.13.1 tensorflowjs==3.18.0 protobuf==3.20.3 tensorflow-hub==0.12.0
 
-    - name: Verify DynamicWorld model exists
-      run: |
-        if [ ! -d "./models/dynamicworld/model/forward" ]; then
-          echo "Forward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/forward"
-          exit 1
-        fi
-        if [ ! -d "./models/dynamicworld/model/backward" ]; then
-          echo "Backward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/backward"
-          exit 1
-        fi
+      - name: Verify DynamicWorld model exists
+        run: |
+          if [ ! -d "./models/dynamicworld/model/forward" ]; then
+            echo "Forward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/forward"
+            exit 1
+          fi
+          if [ ! -d "./models/dynamicworld/model/backward" ]; then
+            echo "Backward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/backward"
+            exit 1
+          fi
 
-    - name: Convert forward model
-      run: |
-        echo "Converting forward model..."
-        tensorflowjs_converter \
-          --input_format=tf_saved_model \
-          --output_format=tfjs_graph_model \
-          ./models/dynamicworld/model/forward \
-          ./models/dynamicworld/tfjs_forward
+      - name: Convert forward model
+        run: |
+          echo "Converting forward model..."
+          tensorflowjs_converter \
+            --input_format=tf_saved_model \
+            --output_format=tfjs_graph_model \
+            ./models/dynamicworld/model/forward \
+            ./models/dynamicworld/tfjs_forward
 
-    - name: Convert backward model
-      run: |
-        echo "Converting backward model..."
-        tensorflowjs_converter \
-          --input_format=tf_saved_model \
-          --output_format=tfjs_graph_model \
-          ./models/dynamicworld/model/backward \
-          ./models/dynamicworld/tfjs_backward
+      - name: Convert backward model
+        run: |
+          echo "Converting backward model..."
+          tensorflowjs_converter \
+            --input_format=tf_saved_model \
+            --output_format=tfjs_graph_model \
+            ./models/dynamicworld/model/backward \
+            ./models/dynamicworld/tfjs_backward
 
-    - name: List converted models
-      run: ls -R ./models/dynamicworld
+      - name: List converted models
+        run: ls -R ./models/dynamicworld
