--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -11,47 +11,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Checkout your repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2. Set up Python (use a valid version)
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10  # Changed from 3.1 to 3.10
+          python-version: 3.10
 
+      # 3. Upgrade pip and install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tensorflow==2.13.1 tensorflowjs==3.18.0 protobuf==3.20.3 tensorflow-hub==0.12.0
+          pip install tensorflow==2.13.1 tensorflowjs==3.18.0 tensorflow-hub==0.12.0 protobuf==3.20.3
 
-      - name: Verify DynamicWorld model exists
+      # 4. Make sure models folder exists
+      - name: Prepare models directory
         run: |
-          if [ ! -d "./models/dynamicworld/model/forward" ]; then
-            echo "Forward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/forward"
+          mkdir -p ./models/dynamicworld
+
+      # 5. Check if saved_model exists
+      - name: Check DynamicWorld SavedModel
+        run: |
+          if [ ! -d "./models/dynamicworld/saved_model" ]; then
+            echo "ERROR: ./models/dynamicworld/saved_model folder not found!"
+            echo "Please add the DynamicWorld SavedModel manually before running this workflow."
             exit 1
           fi
-          if [ ! -d "./models/dynamicworld/model/backward" ]; then
-            echo "Backward model not found! Please make sure saved_model.pb is in ./models/dynamicworld/model/backward"
-            exit 1
-          fi
 
-      - name: Convert forward model
+      # 6. Convert DynamicWorld SavedModel to TensorFlowJS format
+      - name: Convert DynamicWorld to TensorFlowJS
         run: |
-          echo "Converting forward model..."
+          echo "Converting DynamicWorld model to TensorFlowJS format..."
           tensorflowjs_converter \
             --input_format=tf_saved_model \
             --output_format=tfjs_graph_model \
-            ./models/dynamicworld/model/forward \
-            ./models/dynamicworld/tfjs_forward
-
-      - name: Convert backward model
-        run: |
-          echo "Converting backward model..."
-          tensorflowjs_converter \
-            --input_format=tf_saved_model \
-            --output_format=tfjs_graph_model \
-            ./models/dynamicworld/model/backward \
-            ./models/dynamicworld/tfjs_backward
-
-      - name: List converted models
-        run: ls -R ./models/dynamicworld
+            ./models/dynamicworld/saved_model \
+            ./models/dynamicworld/tfjs_model
