--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -1,52 +1,62 @@
-name: DynamicWorld Model Setup
+name: EagleLensAI CI
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  setup-dynamicworld:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout the repo
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      # 1️⃣ Checkout the repo
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    # 2. Setup Python 3.10
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      # 2️⃣ Setup Python 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
 
-    # 3. Upgrade pip and install dependencies
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install tensorflow tensorflowjs
+      # 3️⃣ Install dependencies
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install tensorflow tensorflowjs
 
-    # 4. Check if DynamicWorld model exists
-    - name: Verify DynamicWorld model
-      run: |
-        if [ ! -d "./models/dynamicworld" ]; then
-          echo "ERROR: ./models/dynamicworld folder not found!"
-          echo "Please make sure you committed the DynamicWorld SavedModel in ./models/dynamicworld"
-          exit 1
-        else
-          echo "DynamicWorld model found."
-        fi
+      # 4️⃣ Verify DynamicWorld model exists
+      - name: Check DynamicWorld model
+        run: |
+          if [ ! -d "./dynamicworld/model" ]; then
+            echo "ERROR: DynamicWorld model folder not found!"
+            exit 1
+          else
+            echo "DynamicWorld model found ✅"
+          fi
 
-    # 5. Convert DynamicWorld model to TensorFlow.js (example)
-    - name: Convert DynamicWorld to TensorFlow.js
-      run: |
-        tensorflowjs_converter \
-        --input_format=tf_saved_model \
-        --output_format=tfjs_graph_model \
-        ./models/dynamicworld \
-        ./models/dynamicworld_tfjs
+      # 5️⃣ Convert DynamicWorld model to TensorFlow.js (if needed)
+      - name: Convert DynamicWorld to TFJS
+        run: |
+          if [ -f "./dynamicworld/model/forward/saved_model.pb" ]; then
+            tensorflowjs_converter \
+              --input_format=tf_saved_model \
+              --output_format=tfjs_graph_model \
+              ./dynamicworld/model/forward \
+              ./dynamicworld/tfjs_model/forward
+          fi
+          if [ -f "./dynamicworld/model/backward/saved_model.pb" ]; then
+            tensorflowjs_converter \
+              --input_format=tf_saved_model \
+              --output_format=tfjs_graph_model \
+              ./dynamicworld/model/backward \
+              ./dynamicworld/tfjs_model/backward
+          fi
 
-    # 6. List files to confirm
-    - name: List converted files
-      run: |
-        ls -R ./models/dynamicworld_tfjs
+      # 6️⃣ Optional: Run your tests or server
+      - name: Run server check
+        run: |
+          echo "All setup complete. You can start your server here if needed."
