--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -1,62 +1,63 @@
-name: EagleLensAI CI
+name: Convert DynamicWorld Models
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build:
+  convert-dynamicworld:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repo
+      # 1. Checkout your repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2️⃣ Setup Python 3.10
+      # 2. Set up Python 3.10
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'
 
-      # 3️⃣ Install dependencies
-      - name: Install Python dependencies
+      # 3. Upgrade pip
+      - name: Upgrade pip
+        run: pip install --upgrade pip
+
+      # 4. Install required packages
+      - name: Install required Python packages
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install tensorflow tensorflowjs
+          pip install tensorflow==2.13.1 tensorflowjs==3.18.0 tensorflow-hub==0.12.0 protobuf==3.20.3
 
-      # 4️⃣ Verify DynamicWorld model exists
-      - name: Check DynamicWorld model
+      # 5. Check if dynamicworld/model exists
+      - name: Check DynamicWorld model folder
         run: |
           if [ ! -d "./dynamicworld/model" ]; then
-            echo "ERROR: DynamicWorld model folder not found!"
+            echo "ERROR: ./dynamicworld/model folder not found!"
             exit 1
-          else
-            echo "DynamicWorld model found ✅"
           fi
 
-      # 5️⃣ Convert DynamicWorld model to TensorFlow.js (if needed)
-      - name: Convert DynamicWorld to TFJS
+      # 6. Convert forward model
+      - name: Convert forward model to TFJS
         run: |
-          if [ -f "./dynamicworld/model/forward/saved_model.pb" ]; then
-            tensorflowjs_converter \
-              --input_format=tf_saved_model \
-              --output_format=tfjs_graph_model \
-              ./dynamicworld/model/forward \
-              ./dynamicworld/tfjs_model/forward
-          fi
-          if [ -f "./dynamicworld/model/backward/saved_model.pb" ]; then
-            tensorflowjs_converter \
-              --input_format=tf_saved_model \
-              --output_format=tfjs_graph_model \
-              ./dynamicworld/model/backward \
-              ./dynamicworld/tfjs_model/backward
-          fi
+          echo "Converting forward model..."
+          tensorflowjs_converter \
+            --input_format=tf_saved_model \
+            --output_format=tfjs_graph_model \
+            ./dynamicworld/model/forward/saved_model \
+            ./dynamicworld/model/forward/tfjs_model
 
-      # 6️⃣ Optional: Run your tests or server
-      - name: Run server check
+      # 7. Convert backward model
+      - name: Convert backward model to TFJS
         run: |
-          echo "All setup complete. You can start your server here if needed."
+          echo "Converting backward model..."
+          tensorflowjs_converter \
+            --input_format=tf_saved_model \
+            --output_format=tfjs_graph_model \
+            ./dynamicworld/model/backward/saved_model \
+            ./dynamicworld/model/backward/tfjs_model
+
+      # 8. Success message
+      - name: Conversion complete
+        run: echo "DynamicWorld models converted to TFJS successfully!"
