--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.7",
-    "@tensorflow/tfjs": "^4.22.0",
-    "@turf/turf": "^6.5.0",
     "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
-    "eagle-lens": "file:..",
     "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
-    "wouter": "^3.7.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.0",
     "vite": "^5.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
